--- a/desenvolvimento-frontend/meu-projeto-ts/package.json
+++ b/desenvolvimento-frontend/meu-projeto-ts/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.53",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
