--- a/desenvolvimento-frontend/meu-projeto-next/package.json
+++ b/desenvolvimento-frontend/meu-projeto-next/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
