--- a/desenvolvimento-backend/projeto-biblioteca-autenticado/biblioteca/src/main/resources/application.properties
+++ b/desenvolvimento-backend/projeto-biblioteca-autenticado/biblioteca/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:postgressql://localhost5432/biblioteca
+spring.datasource.username=postgres
+spring.datasource.password=postgresmanager
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.hibernate.ddl-auto=update
