Aula 02: Cria JDBC Repository de Livro

--- a/desenvolvimento-backend/projeto-biblioteca-autenticado/biblioteca/src/main/resources/application.properties
+++ b/desenvolvimento-backend/projeto-biblioteca-autenticado/biblioteca/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgressql://localhost5432/biblioteca
+spring.datasource.url=jdbc:postgresql://localhost:5432/biblioteca
 spring.datasource.username=postgres
 spring.datasource.password=postgresmanager
 spring.datasource.driver-class-name=org.postgresql.Driver
