--- a/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/AndroidManifest.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/aplicativo-teste/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.AplicativoTeste"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".LoginAlternativoActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
