--- a/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/AndroidManifest.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 
         <activity android:name=".MainActivity" />
+        <activity android:name=".RegistroActivity" />
     </application>
 
 </manifest>
