--- a/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/AndroidManifest.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.PrecoFipeApp"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
         </activity>
 
         <activity android:name=".MainActivity" />
-        <activity android:name=".RegistroActivity" />
+        <activity android:name=".activities.RegistroActivity" />
     </application>
 
 </manifest>
