--- a/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/AndroidManifest.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.PrecoFipeApp"
         tools:targetApi="31">
         <activity
-            android:name=".activities.SplashActivity"
+            android:name=".activities.SplashAlternativaActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
