--- a/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/AndroidManifest.xml
+++ b/desenvolvimento-de-aplicacoes-moveis/PrecoFipeApp/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".activities.RegistroActivity" />
         <activity android:name=".activities.LoginActivity" />
         <activity android:name=".activities.ModelosActivity" />
+        <activity android:name=".activities.AnosActivity" />
     </application>
 
 </manifest>
